# mana-habilidade-notificacao-whatsapp

./: .gitignore  LICENSE  README.md  manifest.yaml  pyproject.toml
src/mana_habilidade_notificacao_whatsapp/: __init__.py  coletor.py  contato.py  ddl.py  exceptions.py  helpers.py  scheduler.py  sender.py
tests/: test_coletor.py  test_contato.py  test_ddl.py  test_helpers.py  test_scheduler.py  test_sender.py  test_sender_extra.py
